--- a/public/manifest.json
+++ b/public/manifest.json
@@ -24,5 +24,5 @@
 
   "permissions": ["identity"],
 
-  "content_security_policy": "script-src 'self' https://www.gstatic.com/ https://*.firebaseio.com https://www.googleapis.com https://apis.google.com; object-src 'self'; connect-src 'self' wss://*.firebaseio.com; "
+  "content_security_policy": "script-src 'self' https://www.gstatic.com/ https://*.firebaseio.com https://www.googleapis.com https://apis.google.com; object-src 'self'; connect-src 'self' wss://*.firebaseio.com https://www.googleapis.com https://apis.google.com; "
 }
