--- a/public/manifest.json
+++ b/public/manifest.json
@@ -17,6 +17,11 @@
     "default_popup": "index.html",
     "default_icon": "letter-b.png"
   },
+  "content_scripts": {
+    "matches": ["<all_urls>"],
+    "js": "content.js"
+  },
+
   "background": {
     "scripts": ["background.js"],
     "persistent": false
