--- a/public/manifest.json
+++ b/public/manifest.json
@@ -19,11 +19,14 @@
   },
 
   "background": {
-    "scripts": ["background.js"],
+    "scripts": [
+      "background.js"
+    ],
+    
     "persistent": false
   },
 
-  "permissions": ["identity"],
+  "permissions": ["identity", "storage"], 
 
   "content_security_policy": "script-src 'self' https://www.gstatic.com/ https://*.firebaseio.com https://www.googleapis.com https://apis.google.com; object-src 'self'; connect-src 'self' wss://*.firebaseio.com https://www.googleapis.com https://apis.google.com; "
 }
